--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Home -->
   <section id="home" class="p-6">
     <h2 class="text-xl font-semibold mb-2">Welcome to Research Definit</h2>
-    <p>A blog-style platform for citizen journalism, investigations, and real voices.</p>
+    <p>A regular platform for citizen journalism, investigations, and real voices.</p>
   </section>
 
   <!-- Articles -->
@@ -52,7 +52,7 @@
   <!-- About -->
   <section id="about" class="p-6 bg-white mt-4">
     <h2 class="text-xl font-semibold mb-2">About Research Definit</h2>
-    <p>This platform exists to uncover truths, share perspectives, and build a collective archive of grassroots journalism. Here, every voice matters.</p>
+    <p>Locul unde mema nu-i mușamalizată sub preș.</p>
   </section>
 
   <!-- Contact -->
